# skUG

./: .boring  Changes.md  README.md  README.xcode  Rakefile  SConstruct  TODO
haskell/: hsc3-skUG.cabal
haskell/Sound/SC3/UGen/SKUG/: FM7.hs  Trigger.hs  VAD.hs
site_scons/site_tools/: crossmingw.py  faust.py
skUG.xcodeproj/: project.pbxproj
skUG/FM7/: FM7.scd
skUG/INLF/: INLF.sc  INLF.scd
skUG/Macros/: GrainDelay.sc
skUG/Trigger/: SendTrigN.scd  Trigger.sc
skUG/VEP/: VEPConvolution.sc
src/: BufferGen.cpp  FM7.cpp  INLF.cpp  SKUG.h  Trigger.cpp  VAD.cpp
src/Faust/: Blitz.dsp  Blitzaw.dsp  Blitzquare.dsp  ButterHP2.dsp  ButterHP2C.dsp  ButterHP4.dsp  ButterHP4C.dsp  ButterHP6.dsp  ButterHP6C.dsp  ButterLP2.dsp  ButterLP2C.dsp  ButterLP4.dsp  ButterLP4C.dsp  ButterLP6.dsp  ButterLP6C.dsp  osc.lib  skDSP.lib  skFilter.lib  skOsc.lib
src/Faust/benchmarks/: README  mod.dsp
src/VEP/: VEP.h  VEPBuffer.h  VEPConv.cpp  VEPConv.h  VEPDSP.h  VEPFFT.cpp  VEPFFT.h  VEPPlugin.cpp  VEPRingBuffer.h
tools/: mkminblep.m
